<resources>

    <string name="productDetails">Product Details</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="_108_12_mp">108 + 12 mp</string>
    <string name="_8_gb">8 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>